<resources>
    <string name="app_name">NataBase Prime</string>
    <string name="natabase">NataBase</string>
    <string name="login_title">Log-In Utilizador</string>
    <string name="username_hint">Nome de Utilizador</string>
    <string name="password_hint">Password</string>
    <string name="login_button">ENTRAR</string>
    <string name="google_login_button">Entrar com Google</string>
    <string name="or_divider">OU</string>
    
    <!-- Croissant Menu -->
    <string name="user_label">User</string>
    <string name="enviar">Enviar</string>
    <string name="restart">Restart</string>
    <string name="logout">Log-out</string>
    <string name="croissants_title">Croissants</string>
    <string name="retroceder">Retroceder</string>
    
    <!-- Croissant Product Names -->
    <string name="choc_avela">CHOC E AVELÃ</string>
    <string name="simples">SIMPLES</string>
    <string name="multicereais">MULTICEREAIS</string>
    <string name="multicereais_misto">MULTICEREAIS MISTO</string>
    <string name="misto">MISTO</string>
    <string name="pao_deus_misto">PÃO DE DEUS MISTO</string>
    
    <!-- Pao Menu -->
    <string name="paos_title">Pães</string>
    
    <!-- Pao Product Names -->
    <string name="baguete">BAGUETE</string>
    <string name="bola_lenha">BOLA LENHA</string>
    <string name="pao_cereais">PÃO CEREAIS</string>
    <string name="pao_rustico_fatias">PÃO RUSTICO FATIAS</string>
</resources>